site/assets/css/components/_headline.scss
//
// Typography components
// --------------------------------------------------

// Headlines
.c-headline {
  font-weight: 700;
  text-transform: uppercase;
  @include typi('headline--default');
  display: block;

  span.br {
    display: block;
  }

  span.br-md {
    @include mappy-bp(md) {
      display: block;
    }
  }

  strong {
    color: $color-primary;
  }

  &.c-headline--padded {
    background-color: $color-content;
    color: $color-white;
  }

  &:not(.c-headline--body-font) {
    @include font-ci;
    @include font-smoothing;
  }

  a {
    color: inherit;
  }
}

.c-headline--body-font {
  text-transform: none;
}

.c-headline--text-sizing {
  @include typi('richtext');
}

.c-headline--text-sizing-lg {
  @include typi('richtext-lg');
}

.c-headline--sm {
  @include typi('headline-sm');
}

.c-headline--lg {
  @include typi('headline-lg');
}

.c-headline--inline {
  display: inline;
}

.c-headline--with-spacing-sm,
.c-headline-wrapper--with-spacing-sm {
  margin-bottom: rem(10px);

  @include mappy-bp(md) {
    margin-bottom: rem(20px);
  }
}

.c-headline--with-spacing,
.c-headline-wrapper--with-spacing {
  margin-bottom: rem(30px);

  @include mappy-bp(md) {
    margin-bottom: rem(40px);
  }
}

.c-headline--with-spacing-lg,
.c-headline-wrapper--with-spacing-lg {
  margin-bottom: rem(40px);

  @include mappy-bp(md) {
    margin-bottom: rem(80px);
  }
}

.c-headline--primary {
  color: $color-primary;

  strong {
    color: $color-content;
  }

  &.c-headline--padded {
    background-color: $color-primary;
    color: $color-white;
  }
}

.c-headline--white {
  color: $color-white;

  strong {
    color: $color-primary; // not used yet
  }

  &.c-headline--padded {
    background-color: $color-white;
    color: $color-content;
  }
}

.c-headline--padded {
  display: inline;
  padding: .3em .3em .15em;
  box-decoration-break: clone;
  line-height: 1.25;
}

// headline-wrapper to workaround numerous limitations with `display: inline;` headlines (needed for box-decoration-break)
.c-headline-wrapper {
  @include typi('headline--default');
  transform: translateY(.15em);
}

// Secondary headline
.c-headline-secondary {
  font-weight: 400;
  @include typi('headline--secondary');
  display: block;

  span.br {
    display: block;
  }

  span.br-md {
    @include mappy-bp(md) {
      display: block;
    }
  }

  strong {
    @include font-ci;
    @include font-smoothing;
    display: inline;
    font-size: 0.7em;
    font-weight: 700;
    text-transform: uppercase;
    text-decoration: underline;
    text-underline-offset: 0.25em;
    text-decoration-thickness: 2px;
    vertical-align: calc(0.25em + 2px);
  }
}

.c-headline-tertiary {
  font-weight: 700;
  @include typi('headline--tertiary');
  display: block;
  @include font-ci;
  @include font-smoothing;
  text-transform: uppercase;
  text-decoration: underline;
  text-underline-offset: 0.25em;
  text-decoration-thickness: 2px;
}

.c-headline-secondary-inline {
  @include font-ci;
  @include font-smoothing;
  display: inline;
  font-size: 0.78em;
  font-weight: 700;
  text-transform: uppercase;
  text-decoration: underline;
  text-underline-offset: 0.2em;
  text-decoration-thickness: 1px;
  vertical-align: calc(0.2em + 1px);
}

